# bio-metric

./: README.md  index.html  package.json  render.yaml  supabase_schema.sql  vite.config.js
backend/: .gitignore  README.md  crew_logic.py  main.py  pyproject.toml  requirements.txt  test_crew.py
src/: App.jsx  api.js  index.css  main.jsx
src/components/: AuthModal.jsx  BackgroundElements.jsx  FollowUpQuestions.jsx  HistorySidebar.jsx  Icons.jsx  OnboardingModal.jsx  SearchResults.jsx
